Trying  to fix text overflow

--- a/final-project/emoji-breakup.css
+++ b/final-project/emoji-breakup.css
@@ -344,47 +344,47 @@ footer{
   height:50px;
 }
 
-.emoji, .front {
+/*.emoji, .front {
     width:45px;  /*highest z-index number is the thing on top*/
-    z-index:2;
+    /*z-index:2;*/
     /*gives it a start to animation*/
-    transform: rotateY(0deg);
- }
-
+    /*transform: rotateY(0deg);
+ }*/
+/*
  .front, .back{
   /*keeps the other side hidden*/
- backface-visibility: hidden;
+ /*backface-visibility: hidden;*/
  /*Keep them from both showing*/
- position: absolute;
- }
+ /*position: absolute;
+ }*/
  /*@keyframes front{
 
  }*/
- .container {
+ /*.container {
    transition: 1s;
    transform-style: preserve-3d;
    position: relative;
    perspective: 800px;
 
- }
+ }*/
  /*might want to put up*/
- .card{
+ /*.card{
  transform: rotateY(180deg);
- postion:absolute;
+ postion:absolute;*/
 
- .text, .back{
+ /*.text, .back{
    width:20px;
    text-decoration: underline;
    font-weight: bold;
- }
+ }*/
 
 
 /*FIPPING BETWEEN EMOJIS AND WORDS*/
 /*FROM MONKEY-LIKE WEBSITE*/
-/*.emoji, .front{
+.emoji {
   width:45px;
 }
-.container{
+/*.container{
   perspective:1000;
 
 }
@@ -415,45 +415,56 @@ height: 45px;
   transform: rotateY(180deg);
 }*/
 
+.hide{
+  display:none:
+}
+
 /*USED WEBSITE JAS SENT*/
 /*Container houses the 3D space*/
 /*parent of card*/
-/*.container {
-  width:50px;
-  height:50px;
+.container {
+  /*width:50px;
+  height:50px;*/
   position: relative;
   perspective: 800px;
-}*/
+}
 /*A wrapper for the 3D object*/
 /*100% makes ure it turns from the center*/
 /*child of container*/
-/*.card {
+.card {
   width: 100%;
-  heigh: 100%;
-  postion:absolute;
+  height: 100%;
+  position:absolute;
   transform-style: preserve-3d;
   transition:transform 1s;
-}*/
+
+}
 
 /*THIS WAS SUPPOSED TO BE FIGURE WHICH DOESN'T WORK TRIED TO REPLACE WITH ANOTHER CLASS IN THE SPAN, BUT THAT DIDNWRK EITHER*/
-/*.card. .front, .back{
+.card, .front, .back{
   margin: 0;
   display: block;
   position:absolute;
   width:100%;
   height:100%;
   backface-visibility: hidden;
+  transform: rotateY(180deg);
+  /*min-width: 100px;
+    min-height: 100px;*/
+}
+/*textarea{
+  box-sizing: border-box;
+  width: 100%
 }*/
 
 /*Styles the text of the words before the turn to Emojis*/
-/*.text, .back {
+.text, .back {
   width:20px;
   text-decoration:underline;
   font-weight:bold;
   border:5px;
   border-color: blue;
-  transform: rotateY(180);
-}*/
+}
 /*not sure about where the filipped comes in*/
 /*.card.flipped{
   transform:rotateY(180deg);
